# risco-creditos

./: README.md
credito-analises/: Makefile  README.md  pyproject.toml
credito-analises/analise_credito/: __init__.py  dataset.py  features.py  plots.py
credito-analises/analise_credito/modeling/: data-generation.py  read_data.py
