[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "analise_credito"
version = "0.0.1"
description = "projeto destinado a an\u00e1lise de cr\u00e9dito (riscos, com agendamento automatizado e versionamento de scripts)."
authors = [
  { name = "joaofiorentin" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["analise_credito"]
include = ["pyproject.toml", "analise_credito/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["analise_credito"]
force-sort-within-sections = true

